--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -570,10 +570,186 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [102]
+        [102] καὶ κατὰ ῥήξεις δὲ νεφῶν ὑπὸ πνευμάτων ἔκπτωσίν τε πυρὸς ἀποτελεστικῶν ἀτόμων καὶ τὸ τῆς ἀστραπῆς φάντασμα ἀποτελουσῶν·
     </td>
     <td> 
-        [102]
+        [102] or clouds may be rent by wind and atoms fall out which produce fire and cause the appearance of lightning.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἄλλους δὲ πλείους τρόπους ῥᾳδίως ἔσται καθορᾶν ἐχόμενον ἀεὶ τῶν φαινομένων καὶ τὸ τούτοις ὅμοιον δυνάμενον συνθεωρεῖν.
+    </td>
+    <td> 
+        And several other methods may easily be observed, if one clings always to phenomena and can compare what is akin to these things.
+    </td>
+</tr>
+<tr>
+    <td>
+        προτερεῖ δὲ ἀστραπὴ βροντῆς ἐν τοιᾷδέ τινι περιστάσει νεφῶν καὶ διὰ τὸ ἅμα τῷ τὸ πνεῦμα ἐμπίπτειν ἐξωθεῖσθαι τὸν ἀστραπῆς ἀποτελεστικὸν σχηματισμόν, ὕστερον δὲ τὸ πνεῦμα ἀνειλούμενον τὸν βόμβον ἀποτελεῖν τοῦτον·
+    </td>
+    <td> 
+        Lightning precedes thunder in such a conformation of the clouds, either because at the moment when the wind dashes in, the formation of atoms which gives rise to lightning is driven out, but afterwards the wind whirls about and produces the reverberation;
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἔμπτωσιν δὲ ἀμφοτέρων ἅμα, τῷ τάχει συντονωτέρῳ κεχρῆσθαι πρὸς ἡμᾶς τὴν ἀστραπήν, ὑστερεῖν δὲ τὴν βροντήν,
+    </td>
+    <td> 
+        or because they both dash out at the same moment, but lightning moves at a higher speed towards us, and thunder comes after,
+    </td>
+</tr>
+<tr>
+    <td>
+        [103] καθάπερ ἐπ᾽ ἐνίων ἐξ ἀποστήματος θεωρουμένων καὶ πληγάς τινας ποιουμένων.
+    </td>
+    <td> 
+        [103] as in the case of some things seen at a distance and producing blows.
+    </td>
+</tr>
+<tr>
+    <td>
+        Κεραυνοὺς ἐνδέχεται γίνεσθαι καὶ κατὰ πλείονας πνευμάτων συλλογὰς καὶ κατείλησιν ἰσχυράν τε ἐκπύρωσιν καὶ κατάρρηξιν μέρους καὶ ἔκπτωσιν ἰσχυροτέραν αὐτοῦ ἐπὶ τοὺς κάτω τόπους, τῆς ῥήξεως γινομένης διὰ τὸ τοὺς ἑξῆς τόπους πυκνοτέρους εἶναι διὰ πίλησιν νεφῶν·
+    </td>
+    <td> 
+        Thunderbolts may occur because there are frequent gatherings of wind, which whirls about and is fanned into a fierce flame, and then a portion of it breaks off and rushes violently on the places beneath, the breaking taking place because the regions approached are successively denser owing to the condensation of clouds,
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ αὐτὴν δὲ τὴν τοῦ πυρὸς ἔκπτωσιν ἀνειλουμένου, καθὰ καὶ βροντὴν ἐνδέχεται γίνεσθαι, πλείονος γενομένου καὶ πνευματωθέντος ἰσχυρότερον καὶ ῥήξαντος τὸ νέφος διὰ τὸ μὴ δύνασθαι ὑποχωρεῖν εἰς τὰ ἑξῆς, τῷ πίλησιν γίνεσθαι ἀεὶ πρὸς ἄλληλα.
+    </td>
+    <td> 
+        or as the result of the actual outburst of the whirling fire, in the same way that thunder may be produced, when the fire becomes too great and is too violently fanned by wind and so breaks through the cloud, because it cannot retreat to the next regions owing to the constant condensation of clouds one on the other.
+    </td>
+</tr>
+<tr>
+    <td>
+        [104] καὶ κατ᾽ ἄλλους δὲ τρόπους πλείονας ἐνδέχεται κεραυνοὺς ἀποτελεῖσθαι·
+    </td>
+    <td> 
+        [104] And thunderbolts may be produced in other ways too.
+    </td>
+</tr>
+<tr>
+    <td>
+        μόνον ὁ μῦθος ἀπέστω·
+    </td>
+    <td> 
+        Only superstition must be excluded,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀπέσται δέ, ἐάν τις καλῶς τοῖς φαινομένοις ἀκολουθῶν περὶ τῶν ἀφανῶν σημειῶται.
+    </td>
+    <td> 
+        as it will, if one successfully follows the lead of seen phenomena to gain indications about the invisible.
+    </td>
+</tr>
+<tr>
+    <td>
+        Πρηστῆρας ἐνδέχεται γίνεσθαι καὶ κατὰ κάθεσιν νέφους εἰς τοὺς κάτω τόπους στυλοειδῶς ὑπὸ πνεύματος ἀθρόου ὠσθέντος καὶ διὰ τοῦ πνεύματος πολλοῦ φερομένου, ἅμα καὶ τὸ νέφος εἰς τὸ πλάγιον ὠθοῦντος τοῦ ἐκτὸς πνεύματος·
+    </td>
+    <td> 
+        Cyclones may be produced either by the driving down of a cloud into the regions below in the form of a pillar, because it is pushed by the wind gathered inside it and is driven on by the violence of the wind, while at the same time the wind outside impels it sideways;
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ περίστασιν δὲ πνεύματος εἰς κύκλον, ἀέρος τινὸς ἐπισυνωθουμένου ἄνωθεν·
+    </td>
+    <td> 
+        or by wind forming into circular motion, while mist is simultaneously thrust down from above;
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ῥύσεως πολλῆς πνευμάτων γενομένης καὶ οὐ δυναμένης εἰς τὰ πλάγια διαρρυῆναι διὰ τὴν πέριξ τοῦ ἀέρος πίλησιν.
+    </td>
+    <td> 
+        or when a great rush of wind takes place and cannot pass through sideways owing to the surrounding condensation of the atmosphere.
+    </td>
+</tr>
+<tr>
+    <td>
+        [105] καὶ ἕως μὲν γῆς τοῦ πρηστῆρος καθιεμένου στρόβιλοι γίγνονται, ὡς ἂν καὶ ἡ ἀπογέννησις κατὰ τὴν κίνησιν τοῦ πνεύματος γίνηται·
+    </td>
+    <td> 
+        [105] And when the spout is let down on to the land, whirlwinds are produced in all the various ways in which their creation may occur owing to the movement of the wind,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἕως δὲ θαλάττης δῖνοι ἀποτελοῦνται.
+    </td>
+    <td> 
+        but if it reaches the sea it produces waterspouts.
+    </td>
+</tr>
+<tr>
+    <td>
+        Σεισμοὺς ἐνδέχεται γίνεσθαι καὶ κατὰ πνεύματος ἐν τῇ γῇ ἀπόληψιν καὶ παρὰ μικροὺς ὄγκους αὐτῆς παράθεσιν καὶ συνεχῆ κίνησιν, ὃ τὴν κράδανσιν τῇ γῇ παρασκευάζει.
+    </td>
+    <td> 
+        Earthquakes may be brought about both because wind is caught up in the earth, so that the earth is dislocated in small masses and is continually shaken, and that causes it to sway.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ τὸ πνεῦμα τοῦτο ἢ ἔξωθεν ἐμπεριλαμβάνει &lt;ἢ&gt; ἐκ τοῦ πίπτειν εἴσω ἐδάφη εἰς ἀντροειδεῖς τόπους τῆς γῆς ἐκπνευματοῦντα τὸν ἐπειλημμένον ἀέρα.
+    </td>
+    <td> 
+        This wind it either takes into itself from outside, or else because masses of ground fall in into cavernous places in the earth and fan into wind the air that is imprisoned in them.
+    </td>
+</tr>
+<tr>
+    <td>
+        &lt;καὶ&gt; κατ᾽ αὐτὴν δὲ τὴν διάδοσιν τῆς κινήσεως ἐκ τῶν πτώσεων ἐδαφῶν πολλῶν καὶ πάλιν ἀνταπόδοσιν, ὅταν πυκνώμασι σφοδροτέροις τῆς γῆς ἀπαντήσῃ, ἐνδέχεται σεισμοὺς ἀποτελεῖσθαι,
+    </td>
+    <td> 
+        And again, earthquakes may be brought about by the actual spreading of the movement which results from the fall of many such masses of ground and the return shock, when the first motion comes into collision with more densely packed bodies of earth.
+    </td>
+</tr>
+<tr>
+    <td>
+        [106] καὶ κατ᾽ ἄλλους δὲ πλείους τρόπους τὰς κινήσεις ταύτας τῆς γῆς γίνεσθαι.
+    </td>
+    <td> 
+        [106] There are also many other ways in which these motions of the earth may be caused.
+    </td>
+</tr>
+<tr>
+    <td>
+        Τὰ δὲ πνεύματα συμβαίνει γίνεσθαι κατὰ χρόνον ἀλλοφυλίας τινὸς ἀεὶ καὶ κατὰ μικρὸν παρεισδυομένης, καὶ καθ᾽ ὕδατος ἀφθόνου συλλογήν.
+    </td>
+    <td> 
+        The winds may be produced when from time to time some alien matter is continually and gradually forcing its way in, or owing to the gathering of a vast quantity of water.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὰ δὲ λοιπὰ πνεύματα γίνεται καὶ ὀλίγων πεσόντων εἰς τὰ πολλὰ κοιλώματα, διαδόσεως τούτων γινομένης.
+    </td>
+    <td> 
+        The other winds arise when a few (currents of air) fall into many hollow spaces, and cause a spreading of wind.
+    </td>
+</tr>
+<tr>
+    <td>
+        Χάλαζα συντελεῖται καὶ κατὰ πῆξιν ἰσχυροτέραν, πάντοθεν δὲ πνευματωδῶν περίστασιν τινῶν καὶ καταμέρισιν· 
+    </td>
+    <td> 
+        Hail is produced both by a powerful congelation, when certain windy bodies form together from all sides and split up:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ &lt;κατὰ&gt; πῆξιν μετριωτέραν ὑδατοειδῶν τινων, &lt;καὶ&gt; ὁμοῦ ῥῆξιν, ἅμα τήν τε σύνωσιν αὐτῶν ποιουμένην καὶ τὴν διάρρηξιν πρὸς τὸ κατὰ μέρη συνίστασθαι πηγνύμενα καὶ κατὰ ἀθροότητα.
+    </td>
+    <td> 
+        also by a more moderate congelation of watery bodies and their simultaneous division, which causes at one and the same time their coagulation and separation, so that they cling together as they freeze in their separate parts as well as in their whole masses.
     </td>
 </tr>
 </table>
