--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -752,6 +752,46 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
         also by a more moderate congelation of watery bodies and their simultaneous division, which causes at one and the same time their coagulation and separation, so that they cling together as they freeze in their separate parts as well as in their whole masses.
     </td>
 </tr>
+<tr>
+    <td>
+        [107] ἡ δὲ περιφέρεια οὐκ ἀδυνάτως μὲν ἔχει γίνεσθαι πάντοθεν τῶν ἄκρων ἀποτηκομένων καὶ ἐν τῇ συστάσει πάντοθεν, ὡς λέγεται, κατὰ μέρη ὁμαλῶς περιισταμένων εἴτε ὑδατοειδῶν τινων εἴ τε πνευματωδῶν.
+    </td>
+    <td> 
+        [107] Their circular shape may possibly arise because the corners melt off all round or because at their conformation bodies, whether watery or windy, come together evenly from all directions part by part, as is alleged.
+    </td>
+</tr>
+<tr>
+    <td>
+        Χιόνα δὲ ἐνδέχεται συντελεῖσθαι καὶ ὕδατος λεπτοῦ ἐκχεομένου ἐκ τῶν νεφῶν διὰ πόρων συμμετρίας καὶ θλίψεις ἐπιτηδείων νεφῶν ἀεὶ ὑπὸ πνευμάτων σφοδράς, εἶτα τούτου πῆξιν ἐν τῇ φορᾷ λαμβάνοντος διά τινα ἰσχυρὰν ἐν τοῖς κατωτέρῳ τόποις τῶν νεφῶν ψυχρασίας περίστασιν·
+    </td>
+    <td> 
+        Snow may be produced when fine particles of rain are poured out of the clouds owing to the existence of pores of suitable shape and the strong and constant compression by winds of clouds of the right kind; and then the water is congealed in its descent owing to some conformation of excessive coldness in the clouds in the lower regions.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ πῆξιν δ᾽ ἐν τοῖς νέφεσιν ὁμαλῆ ἀραιότητα ἔχουσιν τοιαύτη πρόεσις ἐκ τῶν νεφῶν γίνοιτο ἂν πρὸς ἄλληλα θλιβομένων ὑδατοειδῶν καὶ συμπαρακειμένων·
+    </td>
+    <td> 
+        Or else owing to congelation in clouds of uniform thinness an exudation of this kind might arise from watery clouds lying side by side and rubbing against one another:
+    </td>
+</tr>
+<tr>
+    <td>
+        ἃ οἱονεὶ σύνωσιν ποιούμενα χάλαζαν ἀποτελεῖ, ὃ μάλιστα γίνεται ἐν τῷ ἀέρι.
+    </td>
+    <td> 
+        for they produce hail by causing coagulation, a process most frequent in the atmosphere.
+    </td>
+</tr>
+<tr>
+    <td>
+        [108]
+    </td>
+    <td> 
+        [108]
+    </td>
+</tr>
 </table>
 </body>
 </html>
