--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -786,10 +786,130 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [108]
+        [108] καὶ κατὰ τρῖψιν δὲ νεφῶν πῆξιν εἰληφότων ἀπόπαλσιν ἂν λαμβάνοι τὸ τῆς χιόνος τοῦτο ἄθροισμα.
     </td>
     <td> 
-        [108]
+        [108] Or else, owing to the friction of congealed clouds, these nuclei of snow may find occasion to break off.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἄλλους δὲ τρόπους ἐνδέχεται χιόνα συντελεῖσθαι.
+    </td>
+    <td> 
+        And there are many other ways in which snow may be produced.
+    </td>
+</tr>
+<tr>
+    <td>
+        Δρόσος συντελεῖται καὶ κατὰ σύνοδον πρὸς ἄλληλα ἐκ τοῦ ἀέρος τῶν τοιούτων, ἃ τῆς τοιαύτης ὑγρασίας ἀποτελεστικὰ γίνεται·
+    </td>
+    <td> 
+        Dew may be produced both when such particles as are productive of this kind of moisture issue from the atmosphere and meet one another,
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ φορὰν δὲ ἢ ἀπὸ νοτερῶν τόπων ἢ ὕδατα κεκτημένων, ἐν οἵοις τόποις μάλιστα δρόσος συντελεῖται, εἶτα σύνοδον τούτων εἰς τὸ αὐτὸ λαβόντων καὶ ἀποτέλεσιν ὑγρασίας καὶ πάλιν φορὰν ἐπὶ τοὺς κάτω τόπους, καθάπερ ὁμοίως καὶ παρ᾽ ἡμῖν ἐπὶ πλεόνων τοιαῦτά τινα &lt;θεωρεῖται.
+    </td>
+    <td> 
+        and also when particles rise from moist regions or regions containing water, in which dew is most naturally produced, and then meet together and cause moisture to be produced, and afterwards fall back on the ground below, as &lt;is&gt; frequently &lt;seen&gt; to be the case in phenomena on earth as well.
+    </td>
+</tr>
+<tr>
+    <td>
+        [109] καὶ πάχνη δὲ μεταβαλλομένων&gt; συντελεῖται τῶν δρόσων, τοιούτων τινῶν πῆξίν τινα λαβόντων διὰ περίστασίν τινα ἀέρος ψυχροῦ.
+    </td>
+    <td> 
+        [109] &lt;And frost is produced by a change&gt; in the dew-particles, when such particles as we have described undergo a definite kind of congelation owing to the neighbourhood of a cold atmosphere.
+    </td>
+</tr>
+<tr>
+    <td>
+        Κρύσταλλος συντελεῖται καὶ κατ᾽ ἔκθλιψιν μὲν τοῦ περιφεροῦς σχηματισμοῦ ἐκ τοῦ ὕδατος, σύνωσιν δὲ τῶν σκαληνῶν καὶ ὀξυγωνίων τῶν ἐν τῷ ὕδατι ὑπαρχόντων·
+    </td>
+    <td> 
+        Ice is caused both by the squeezing out from the water of particles of round formation and the driving together of the triangular and acute-angled particles which exist already in the water,
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ ἔξωθεν δὲ τῶν τοιούτων πρόσκρισιν, ἃ συνελαθέντα πῆξιν τῷ ὕδατι παρεσκεύασε, ποσὰ τῶν περιφερῶν ἐκθλίψαντα.
+    </td>
+    <td> 
+        and again by the addition from without of particles of this kind, which when driven together produce a congelation in the water, by squeezing out a certain number of the round particles.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἶρις γίνεται κατὰ πρόσλαμψιν ἀπὸ τοῦ ἡλίου πρὸς ἀέρα ὑδατοειδῆ·
+    </td>
+    <td> 
+        The rainbow is caused by light shining from the sun on to watery atmosphere:
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢ κατὰ πρόσκρισιν ἰδίαν τοῦ τε φωτὸς καὶ τοῦ ἀέρος, ἣ τὰ τῶν χρωμάτων τούτων ἰδιώματα ποιήσει εἴτε πάντα εἴτε μονοειδῶς·
+    </td>
+    <td> 
+        or else by a peculiar union of light and air, which can produce the special qualities of these colours whether all together or separately;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀφ᾽ οὗ πάλιν ἀπολάμποντος τὰ ὁμοροῦντα τοῦ ἀέρος χρῶσιν τοιαύτην λήψεται, οἵαν θεωροῦμεν, κατὰ πρόσλαμψιν πρὸς τὰ μέρη.
+    </td>
+    <td> 
+        from it as it reflects back again the neighbouring regions of the air can take the tint which we see, by means of the shining of the light on to its various parts.
+    </td>
+</tr>
+<tr>
+    <td>
+        [110] τὸ δὲ τῆς περιφερείας τοῦτο φάντασμα γίνεται διὰ τὸ τὸ διάστημα πάντοθεν ἴσον ὑπὸ τῆς ὄψεως θεωρεῖσθαι, ἢ σύνωσιν τοιαύτην λαμβανουσῶν τῶν ἐν τῷ ἀέρι ἀτόμων ἢ ἐν τοῖς νέφεσιν ἀπὸ τοῦ αὐτοῦ ἀέρος ἀποφερομένων περιφέρειάν τινα καθίεσθαι τὴν σύγκρισιν ταύτην.
+    </td>
+    <td> 
+        [110] The appearance of its round shape is caused because it is perceived by our sight at equal distance from all its points, or else because the atoms in the air or those in the clouds which are derived from the same air, are pressed together in this manner, and so the combination spreads out in a round shape.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἅλως περὶ τὴν σελήνην γίνεται καὶ πάντοθεν ἀέρος προσφερομένου πρὸς τὴν σελήνην ἢ τὰ ἀπ᾽ αὐτῆς ῥεύματα ἀποφερόμενα ὁμαλῶς ἀναστέλλοντος ἐπὶ τοσοῦτον ἐφ᾽ ὅσον κύκλῳ περιστῆσαι εἰς τὸ νεφοειδὲς τοῦτο καὶ μὴ τὸ παράπαν διακρῖναι, ἢ καὶ τὸν πέριξ ἀέρα αὐτῆς ἀναστέλλοντος συμμέτρως πάντοθεν εἰς τὸ περιφερὲς τὸ περὶ αὐτὴν καὶ παχυμερὲς περιστῆσαι.
+    </td>
+    <td> 
+        A halo round the moon is caused either when air is carried towards the moon from all sides, or when the air checks the effluences carried from the moon so equably that it forms them into this cloudy ring all round without any gaps or differences, or else when it checks the air round the moon uniformly on all sides so as to make that which encircles it round and thick in texture.
+    </td>
+</tr>
+<tr>
+    <td>
+        [111] ὃ γίνεται κατὰ μέρη τινὰ ἤτοι ἔξωθεν βιασαμένου τινὸς ῥεύματος ἢ τῆς θερμασίας ἐπιτηδείως πόρων ἐπιλαμβανομένης εἰς τὸ τοῦτο ἀπεργάσασθαι.
+    </td>
+    <td> 
+        [111] This comes to pass in different parts either because some current outside forces the air or because heat blocks the passages in such a way as to produce this effect.
+    </td>
+</tr>
+<tr>
+    <td>
+        Κομῆται ἀστέρες γίνονται ἤτοι πυρὸς ἐν τόποις τισὶ διὰ χρόνων τινῶν ἐν τοῖς μετεώροις συντρεφομένου περιστάσεως γινομένης, ἢ ἰδίαν τινὰ κίνησιν διὰ χρόνων τοῦ οὐρανοῦ ἴσχοντος ὑπὲρ ἡμᾶς, ὥστε τὰ τοιαῦτα ἄστρα ἀναφανῆναι ἢ αὐτὰ ἐν χρόνοις τισὶν ὁρμῆσαι διά τινα περίστασιν καὶ εἰς τοὺς καθ᾽ ἡμᾶς τόπους ἐλθεῖν καὶ ἐκφανῆ γενέσθαι.
+    </td>
+    <td> 
+        Comets occur either when fire is collected together in certain regions at certain intervals of time in the upper air because some gathering of matter takes place, or when at certain intervals the heaven above us has some peculiar movement, so that stars of this nature are revealed, or when they themselves at certain seasons start to move on account of some gathering of matter and come into the regions within our ken and appear visible.
+    </td>
+</tr>
+<tr>
+    <td>
+        τήν τε ἀφάνισιν τούτων γίνεσθαι παρὰ τὰς ἀντικειμένας ταύταις αἰτίας.
+    </td>
+    <td> 
+        And their disappearance occurs owing to the opposite causes to these.
+    </td>
+</tr>
+<tr>
+    <td>
+        [112]
+    </td>
+    <td> 
+        [112]
     </td>
 </tr>
 </table>
