--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -906,10 +906,66 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [112]
+        [112] Τινὰ ἄστρα στρέφεται αὐτοῦ συμβαίνει οὐ μόνον τῷ τὸ μέρος τοῦτο τοῦ κόσμου ἑστάναι, περὶ ὃ τὸ λοιπὸν στρέφεται, καθάπερ τινές φασιν, ἀλλὰ καὶ τῷ δίνην ἀέρος ἔγκυκλον αὐτῷ περιεστάναι, ἣ κωλυτικὴ γίνεται τοῦ περιπολεῖν ὡς καὶ τὰ ἄλλα·
     </td>
     <td> 
-        [112]
+        [112] Some stars 'revolve in their place' (as Homer says), which comes to pass not only because this part of the world is stationary and round it the rest revolves, as some say, but also because a whirl of air is formed in a ring round it, which prevents their moving about as do the other stars:
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢ καὶ διὰ τὸ ἑξῆς μὲν αὐτοῖς ὕλην ἐπιτηδείαν μὴ εἶναι, ἐν δὲ τούτῳ τῷ τόπῳ ἐν ᾧ κείμενα θεωρεῖται.
+    </td>
+    <td> 
+        or else it is because there is not a succession of appropriate fuel for them, but only in this place in which they are seen fixed.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἄλλους δὲ πλείονας τρόπους τοῦτο δυνατὸν συντελεῖσθαι, ἐάν τις δύνηται τὸ σύμφωνον τοῖς φαινομένοις συλλογίζεσθαι.
+    </td>
+    <td> 
+        And there are many other ways in which this may be brought about, if one is able to infer what is in agreement with phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        Τινὰ τῶν ἄστρων πλανᾶσθαι, εἰ οὕτω ταῖς κινήσεσι χρώμενα συμβαίνει,
+    </td>
+    <td> 
+        That some of the stars should wander in their course, if indeed it is the case that their movements are such,
+    </td>
+</tr>
+<tr>
+    <td>
+        [113] τινὰ δὲ μὴ &lt;οὕτω&gt; κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηγαγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλὴν οὖσαν, τὰ δὲ κατά τὴν ἅμα τισὶν ἀνωμαλίαις χρωμένην·
+    </td>
+    <td> 
+        [113] while others do not move in this manner, may be due to the reason that from the first as they moved in their circles they were so constrained by necessity that some of them move along the same regular orbit, and others along one which is associated with certain irregularities:
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐνδέχεται δὲ καὶ καθ᾽ οὓς τόπους φέρεται οὗ μὲν παρεκτάσεις ἀέρος εἶναι ὁμαλὰς ἐπὶ τὸ αὐτὸ συνωθούσας κατὰ τὸ ἑξῆς ὁμαλῶς τε ἐκκαούσας, οὗ δὲ ἀνωμαλεῖς ὥστε τὰς θεωρουμένας παραλλαγὰς συντελεῖσθαι.
+    </td>
+    <td> 
+        or it may be that among the regions to which they are carried in some places there are regular tracts of air which urge them on successively in the same direction and provide flame for them regularly, while in other places the tracts are irregular, so that the aberrations which we observe result.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ μίαν αἰτίαν τούτων ἀποδιδόναι, πλεοναχῶς τῶν φαινομένων ἐκκαλουμένων, μανικὸν καὶ οὐ καθηκόντως πραττόμενον ὑπὸ τῶν τὴν ματαίαν ἀστρολογίαν ἐζηλωκότων καὶ εἰς τὸ κενὸν αἰτίας τινῶν ἀποδιδόντων, ὅταν τὴν θείαν φύσιν μηθαμῇ λειτουργιὼν ἀπολύωσι.
+    </td>
+    <td> 
+        But to assign a single cause for these occurrences, when phenomena demand several explanations, is madness, and is quite wrongly practised by persons who are partisans of the foolish notions of astrology, by which they give futile explanations of the causes of certain occurrences, and all the time do not by any means free the divine nature from the burden of responsibilities.
+    </td>
+</tr>
+<tr>
+    <td>
+        [114]
+    </td>
+    <td> 
+        [114]
     </td>
 </tr>
 </table>
