Finished basic pythocles

--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -962,10 +962,122 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [114]
+        [114] Τινὰ ἄστρα ὑπολειπόμενα τινῶν θεωρεῖσθαι συμβαίνει καὶ παρὰ τὸ βραδύτερον συμπεριφέρεσθαι τὸν αὐτὸν κύκλον περιιόντα, καὶ παρὰ τὸ τὴν ἐναντίαν κινεῖσθαι ἀντισπώμενα ὑπὸ τῆς αὐτῆς δίνης·
     </td>
     <td> 
-        [114]
+        [114] That some stars should be seen to be left behind by others is caused because though they move round in the same orbit they are carried along more slowly, and also because they really move in the opposite direction though they are dragged back by the same revolution:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ παρὰ τὸ περιφέρεσθαι τὰ μὲν διὰ πλείονος τόπου, τὰ δὲ δι᾽ ἐλάττονος, τὴν αὐτὴν δίνην περικυκλοῦντα.
+    </td>
+    <td> 
+        also because some are carried round through a greater space and some through a lesser, though all perform the same revolution.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ ἁπλῶς ἀποφαίνεσθαι περὶ τούτων καθῆκόν ἐστι τοῖς τερατεύεσθαί τι πρὸς τοὺς πολλοὺς βουλομένοις.
+    </td>
+    <td> 
+        But to give a single explanation of these occurrences is only suitable to those who wish to make a show to the many.
+    </td>
+</tr>
+<tr>
+    <td>
+        Οἱ λεγόμενοι ἀστέρες ἐκπίπτειν καὶ παρὰ μέρος κατὰ παράτριψιν ἑαυτῶν δύνανται συντελεῖσθαι καὶ παρὰ ἔκπτωσιν οὗ ἂν ἡ ἐκπνευμάτωσις γένηται, καθάπερ καὶ ἐπὶ τῶν ἀστραπῶν ἐλέγομεν·
+    </td>
+    <td> 
+        What are called falling stars may be produced in part by the rubbing of star against star, and by the falling out of the fragments wherever an outburst of wind occurs, as we explained in the case of lightning-flashes:
+    </td>
+</tr>
+<tr>
+    <td>
+        [115] καὶ κατὰ σύνοδον δὲ ἀτόμων πυρὸς ἀποτελεστικῶν, συμφυλίας γενομένης εἰς τὸ τοῦτο τελέσαι, καὶ κίνησιν οὗ ἂν ἡ ὁρμὴ ἐξ ἀρχῆς κατὰ τὴν σύνοδον γένηται·
+    </td>
+    <td> 
+        [115] or else by the meeting of atoms productive of fire, when a gathering of kindred material occurs to cause this, and a movement in the direction of the impulse which results from the original meeting;
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ πνεύματος δὲ συλλογὴν ἐν πυκνώμασί τισιν ὀμιχλοειδέσι καὶ ἐκπύρωσιν τούτου διὰ τὴν κατείλησιν, εἶτ᾽ ἐπέκρηξιν τῶν περιεχόντων, καὶ ἐφ᾽ ὃν ἂν τόπον ἡ ὁρμὴ γένηται τῆς φορᾶς, εἰς τοῦτον φερομένου.
+    </td>
+    <td> 
+        or else by a gathering of wind in certain dense and misty formations, and its ignition as it whirls round, and then its bursting out of what encloses it and its rush towards the spot to which the impulse of its flight tends.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ἄλλοι δὲ τρόποι εἰς τὸ τοῦτο τελέσαι ἀμύθητοί εἰσιν.
+    </td>
+    <td> 
+        And there are other ways in which this result may be brought about, quite free from superstition.
+    </td>
+</tr>
+<tr>
+    <td>
+        Αἱ δ᾽ ἐπισημασίαι αἱ γινόμεναι ἐπί τισι ζῴοις κατὰ συγκύρημα γίνονται τοῦ καιροῦ.
+    </td>
+    <td> 
+        The signs of the weather which are given by certain animals result from mere coincidence of occasion.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ τὰ ζῷα ἀνάγκην τινὰ προσφέρεται τοῦ ἀποτελεσθῆναι χειμῶνα, οὐδὲ κάθηταί τις θεία φύσις παρατηροῦσα τὰς τῶν ζῴων τούτων ἐξόδους κἄπειτα τὰς ἐπισημασίας ταύτας ἐπιτελεῖ·
+    </td>
+    <td> 
+        For the animals do not exert any compulsion for winter to come to an end, nor is there some divine nature which sits and watches the outgoings of these animals and then fulfils the signs they give.
+    </td>
+</tr>
+<tr>
+    <td>
+        [116] οὐδὲ γὰρ &lt;ἂν&gt; εἰς τὸ τυχὸν ζῷον κἂν &lt;εἰ&gt; μικρὸν χαριέστερον εἴη, τοιαύτη μωρία ἐμπέσοι, μὴ ὅτι εἰς παντελῆ εὐδαιμονίαν κεκτημένον.
+    </td>
+    <td> 
+        [116] For not even the lowest animal, although 'a small thing gives the greater pleasure', would be seized by such foolishness, much less one who was possessed of perfect happiness.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ταῦτα δὴ πάντα, Πυθόκλεις, μνημόνευσον·
+    </td>
+    <td> 
+        All these things, Pythocles, you must bear in mind;
+    </td>
+</tr>
+<tr>
+    <td>
+        κατὰ πολύ τε γὰρ τοῦ μύθου ἐκβήσῃ καὶ τὰ ὁμογενῆ τούτοις συνορᾶν δυνήσῃ.
+    </td>
+    <td> 
+        for thus you will escape in most things from superstition and will be enabled to understand what is akin to them.
+    </td>
+</tr>
+<tr>
+    <td>
+        μάλιστα δὲ σεαυτὸν ἀπόδος εἰς τὴν τῶν ἀρχῶν καὶ ἀπειρίας καὶ τῶν συγγενῶν τούτοις θεωρίαν, ἔτι δὲ κριτηρίων καὶ παθῶν, καὶ οὗ ἕνεκεν ταῦτα ἐκλογιζόμεθα.
+    </td>
+    <td> 
+        And most of all give yourself up to the study of the beginnings and of infinity and of the things akin to them, and also of the criteria of truth and of the feelings, and of the purpose for which we reason out these things.
+    </td>
+</tr>
+<tr>
+    <td>
+        ταῦτα γὰρ μάλιστα συνθεωρούμενα ῥᾳδίως τὰς περὶ τῶν κατὰ μέρος αἰτίας συνορᾶν ποιήσει.
+    </td>
+    <td> 
+        For these points when they are thoroughly studied will most easily enable you to understand the causes of the details.
+    </td>
+</tr>
+<tr>
+    <td>
+        οἱ δὲ ταῦτα μὴ καταγαπήσαντες ᾗ μάλιστα οὔτ᾽ &lt;ἂv&gt; αὐτὰ ταῦτα καλῶς συνθεωρήσαιεν οὔτε οὗ ἕνεκεν δεῖ θεωρεῖν ταῦτα περιεποιήσαντο.
+    </td>
+    <td> 
+        But those who have not thoroughly taken these things to heart could not rightly study them in themselves, nor have they made their own the reason for observing them.
     </td>
 </tr>
 </table>
