--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -22,30 +22,12 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
   <li>(text) - Represents text that Usener thinks has been added by later commentators</li>
   <li> · - An ano teleia mark, which functions like a semicolon.</li>
 </ul>
-
+<br>
 ΕΠΙΚΟΥΡΟΣ ΠΥΘΟΚΛΕΙ ΧΑΙΡΕΙΝ
 <br>
+<p class="indent">[84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς· τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι. ἧμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν. [85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις. καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν.</p>
 <p class="indent">
-[84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς·
-
-τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι.
-
-ἧμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν.
-
-[85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις.
-
-καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν.
-</p>
-<p class="indent">
-Πρῶτον μὲν οὖν μὴ ἄλλο τι τέλος ἐκ τῆς περὶ μετεώρων γνώσεως εἴ τε κατὰ συναφὴν λεγομένων εἴ τε αὐτοτελῶς νομίζειν εἶναι ἤ περ ἀταραξίαν καὶ πίστιν βέβαιον, καθά περ καὶ ἐπὶ τῶν λοιπῶν.
-
-[86] Μήτε τὸ ἀδύνατον καὶ παραβιάζεσθαι μήτε ὁμοίαν κατὰ πάντα τὴν θεωρίαν ἔχειν ἢ τοῖς περὶ βίων λόγοις ἢ τοῖς κατὰ τὴν τῶν ἄλλων φυσικῶν προβλημάτων κάθαρσιν, οἷον ὅτι τὸ πᾶν σώματα καὶ ἀναφὴς φύσις ἐστὶν ἢ ὅτι ἄτομα &lt;τὰ&gt; στοιχεῖα, καὶ πάντα τὰ τοιαῦτα ὅσα μοναχὴν ἔχει τοῖς φαινομένοις συμφωνίαν·
-
-ὅ περ ἐπὶ τῶν μετεώρων οὐχ ὑπάρχει, ἀλλὰ ταῦτά γε πλεοναχὴν ἔχει καὶ τῆς γενέσεως αἰτίαν καὶ τῆς οὐσίας ταῖς αἰσθήσεσι σύμφωνον κατηγορίαν.
-
-οὐ γὰρ κατὰ ἀξιώματα κενὰ καὶ νομοθεσίας φυσιολογητέον, ἀλλ᾽ ὡς τὰ φαινόμενα ἐκκαλεῖται·
-
-[87] οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
+Πρῶτον μὲν οὖν μὴ ἄλλο τι τέλος ἐκ τῆς περὶ μετεώρων γνώσεως εἴ τε κατὰ συναφὴν λεγομένων εἴ τε αὐτοτελῶς νομίζειν εἶναι ἤ περ ἀταραξίαν καὶ πίστιν βέβαιον, καθά περ καὶ ἐπὶ τῶν λοιπῶν. [86] Μήτε τὸ ἀδύνατον καὶ παραβιάζεσθαι μήτε ὁμοίαν κατὰ πάντα τὴν θεωρίαν ἔχειν ἢ τοῖς περὶ βίων λόγοις ἢ τοῖς κατὰ τὴν τῶν ἄλλων φυσικῶν προβλημάτων κάθαρσιν, οἷον ὅτι τὸ πᾶν σώματα καὶ ἀναφὴς φύσις ἐστὶν ἢ ὅτι ἄτομα &lt;τὰ&gt; στοιχεῖα, καὶ πάντα τὰ τοιαῦτα ὅσα μοναχὴν ἔχει τοῖς φαινομένοις συμφωνίαν· ὅ περ ἐπὶ τῶν μετεώρων οὐχ ὑπάρχει, ἀλλὰ ταῦτά γε πλεοναχὴν ἔχει καὶ τῆς γενέσεως αἰτίαν καὶ τῆς οὐσίας ταῖς αἰσθήσεσι σύμφωνον κατηγορίαν. οὐ γὰρ κατὰ ἀξιώματα κενὰ καὶ νομοθεσίας φυσιολογητέον, ἀλλ᾽ ὡς τὰ φαινόμενα ἐκκαλεῖται· [87] οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
 
 πάντα μὲν οὖν γίνεται ἀσείστως καὶ πάντων κατὰ πλεοναχὸν τρόπον ἐκκαθαιρομένων συμφώνως τοῖς φαινομένοις, ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
 
@@ -294,8 +276,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 Αἱ δ᾽ ἐπισημασίαι αἱ γινόμεναι ἐπί τισι ζῴοις κατὰ συγκύρημα γίνονται τοῦ καιροῦ.
 
-οὐ γὰρ τὰ ζῷα ἀνάγκην τινὰ προσφέρεται τοῦ ἀποτελεσθῆναι χειμῶνα, οὐδὲ κάθηταί τις θεία φύσις παρατηροῦσα τὰς τῶν ζῴων τούτων 
-ἐξόδους κἄπειτα τὰς ἐπισημασίας ταύτας ἐπιτελεῖ·
+οὐ γὰρ τὰ ζῷα ἀνάγκην τινὰ προσφέρεται τοῦ ἀποτελεσθῆναι χειμῶνα, οὐδὲ κάθηταί τις θεία φύσις παρατηροῦσα τὰς τῶν ζῴων τούτων ἐξόδους κἄπειτα τὰς ἐπισημασίας ταύτας ἐπιτελεῖ·
 
 [116] οὐδὲ γὰρ εἰς τὸ τυχὸν ζῷον κἂν &lt;εἰ&gt; μικρὸν χαριέστερον εἴη, τοιαύτη μωρία ἐμπέσοι, μὴ ὅτι εἰς παντελῆ εὐδαιμονίαν κεκτημένον.
 </p>
