Started updating dictionary

--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -170,7 +170,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;έν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
+        τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;ἐν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
     </td>
     <td> 
         seeing that no phenomenon is evidence against this in our world, in which it is not possible to perceive an ending.
@@ -434,10 +434,10 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρα τὸ&gt; τόπους τινὰς περαιοῦν τάκιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
+        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρὰ τὸ&gt; τόπους τινὰς περαιοῦν τάκιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
     </td>
     <td> 
-        [98] The successive changes in the length of nights and days may be due to the fact that the sun’s movements above the earth become fast and then slow again because he passes across regions of unequal length or because he traverses some regions more quickly or more slowly, &lt;or again to the quicker or slower gathering of the fires that make the sun&gt;, as we observe occurs with some things on earth, with which we must be in harmony in speaking of celestial phenomena.
+        [98] The successive changes in the length of nights and days may be due to the fact that the sun's movements above the earth become fast and then slow again because he passes across regions of unequal length or because he traverses some regions more quickly or more slowly, &lt;or again to the quicker or slower gathering of the fires that make the sun&gt;, as we observe occurs with some things on earth, with which we must be in harmony in speaking of celestial phenomena.
     </td>
 </tr>
 <tr>
@@ -1074,7 +1074,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        οἱ δὲ ταῦτα μὴ καταγαπήσαντες ᾗ μάλιστα οὔτ᾽ &lt;ἂv&gt; αὐτὰ ταῦτα καλῶς συνθεωρήσαιεν οὔτε οὗ ἕνεκεν δεῖ θεωρεῖν ταῦτα περιεποιήσαντο.
+        οἱ δὲ ταῦτα μὴ καταγαπήσαντες ᾗ μάλιστα οὔτ᾽ &lt;ἂν&gt; αὐτὰ ταῦτα καλῶς συνθεωρήσαιεν οὔτε οὗ ἕνεκεν δεῖ θεωρεῖν ταῦτα περιεποιήσαντο.
     </td>
     <td> 
         But those who have not thoroughly taken these things to heart could not rightly study them in themselves, nor have they made their own the reason for observing them.
