--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -44,7 +44,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 πανταχῶς γὰρ ἐνδέχεται·
 
-τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;έν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
+τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;ἐν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
 
 [89] Ὄτι δὲ καὶ τοιοῦτοι κόσμοι εἰσὶν ἄπειροι τὸ πλῆθος, ἔστι καταλαβεῖν, καὶ ὅτι καὶ ὁ τοιοῦτος δύναται κόσμος γίνεσθαι καὶ ἐν κόσμῳ καὶ μετακοσμίῳ, ὃ λέγομεν μεταξὺ κόσμων διάστημα, ἐν πολυκένῳ τόπῳ καὶ οὐκ ἐν μεγάλῳ εἰλικρινεῖ καὶ κενῷ, καθά περ τινὲς φασίν, ἐπιτηδείων τινῶν σπερμάτων ῥυέντων ἀφ᾽ ἑνὸς κόσμου ἢ μετακοσμίου ἢ καὶ ἀπὸ πλειόνων κατὰ μικρὸν προσθέσεις τε καὶ διαρθρώσεις καὶ μεταστάσεις ποιούντων ἐπ᾽ ἄλλον τόπον, ἐὰν οὕτω τύχῃ, καὶ ἐπαρδεύσεις ἐκ τῶν ἐχόντων ἐπιτηδείως ἕως τελειώσεως καὶ διαμονὴν ἐφ᾽ ὅσον τὰ ὑποβληθέντα θεμέλια τὴν προσδοχὴν δύναται ποιεῖσθαι.
 
