--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -330,7 +330,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [94] Κένωσεις τε σελήνης καὶ πάλιν πλήρωσεις καὶ κατὰ στροφὴν τοῦ σώματος τούτου δύναιντ᾽ ἂν γίνεσθαι καὶ κατὰ σχηματισμοὺς ἀέρος ὁμοίως, ἔτι τε καὶ κατα προσθετήσεις καὶ κατὰ πάντας τρόπους, καθ᾽ οὓς καὶ τὰ παρ᾽ ἡμῖν φαινόμενα ἐκκαλεῖται εἰς τὰς τούτου τοῦ εἴδους ἀποδόσεις, ἐὰν μή τις τὸν μοναχῇ τρόπον κατηγαπηκὼς τοὺς ἄλλους κενῶς ἀποδοκιμάζῃ, οὐ τεθεωρηκὼς τί δυνατὸν ἀνθρώπῳ θεωρῆσαι καὶ τί ἀδύνατον, καὶ διὰ τοῦτο ἀδύνατα θεωρεῖν ἐπιθυμῶν.
+        [94] Κένωσεις τε σελήνης καὶ πάλιν πλήρωσεις καὶ κατὰ στροφὴν τοῦ σώματος τούτου δύναιντ᾽ ἂν γίνεσθαι καὶ κατὰ σχηματισμοὺς ἀέρος ὁμοίως, ἔτι τε καὶ κατὰ προσθετήσεις καὶ κατὰ πάντας τρόπους, καθ᾽ οὓς καὶ τὰ παρ᾽ ἡμῖν φαινόμενα ἐκκαλεῖται εἰς τὰς τούτου τοῦ εἴδους ἀποδόσεις, ἐὰν μή τις τὸν μοναχῇ τρόπον κατηγαπηκὼς τοὺς ἄλλους κενῶς ἀποδοκιμάζῃ, οὐ τεθεωρηκὼς τί δυνατὸν ἀνθρώπῳ θεωρῆσαι καὶ τί ἀδύνατον, καὶ διὰ τοῦτο ἀδύνατα θεωρεῖν ἐπιθυμῶν.
     </td>
     <td> 
         [94] The wanings of the moon and its subsequent waxings might be due to the revolution of its own body, or equally well to successive conformations of the atmosphere, or again to the interposition of other bodies; they may be accounted for in all the ways in which phenomena on earth invite us to such explanations of these phases; provided only one does not become enamoured of the method of the single cause and groundlessly put the others out of court, without having considered what it is possible for a man to observe and what is not, and desiring therefore to observe what is impossible.
@@ -938,7 +938,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [113] τινὰ δὲ μὴ &lt;οὕτω&gt; κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηγαγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλὴν οὖσαν, τὰ δὲ κατά τὴν ἅμα τισὶν ἀνωμαλίαις χρωμένην·
+        [113] τινὰ δὲ μὴ &lt;οὕτω&gt; κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηναγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλὴν οὖσαν, τὰ δὲ κατά τὴν ἅμα τισὶν ἀνωμαλίαις χρωμένην·
     </td>
     <td> 
         [113] while others do not move in this manner, may be due to the reason that from the first as they moved in their circles they were so constrained by necessity that some of them move along the same regular orbit, and others along one which is associated with certain irregularities:
