--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -252,7 +252,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 Τινὰ τῶν ἄστρων πλανᾶσθαι, εἰ οὕτω ταῖς κινήσεσι χρώμενα συμβαίνει,
 
-[113] τινὰ δ᾽ ὁμαλῶς κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηγαγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλῆ οὖσαν, τὰ δὲ κατά τινα δίνησιν ἀνωμαλίαις χρωμένην·
+[113] τινὰ δ᾽ ὁμαλῶς κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηναγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλῆ οὖσαν, τὰ δὲ κατά τινα δίνησιν ἀνωμαλίαις χρωμένην·
 
 ἐνδέχεται δὲ καὶ καθ᾽ οὓς τόπους φέρεται οὗ μὲν παρεκτάσεις ἀέρος εἶναι ὁμαλεῖς ἐπὶ τὸ αὐτὸ συνωθούσας κατὰ τὸ ἑξῆς ὁμαλῶς τε ἐκκαούσας, οὗ δὲ ἀνωμαλεῖς οὕτως ὥστε τὰς θεωρουμένας παραλλαγὰς συντελεῖσθαι.
 
